--- a/trunk/spock-example/pom.xml
+++ b/trunk/spock-example/pom.xml
@@ -39,6 +39,13 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <version>2.4</version>
+        <configuration>
+          <skip>true</skip>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
