--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,11 @@
         <artifactId>h2</artifactId>
         <version>1.1.116</version>
       </dependency>
+      <dependency>
+        <groupId>org.apache.ant</groupId>
+        <artifactId>ant</artifactId>
+        <version>1.7.1</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
