--- a/pom.xml
+++ b/pom.xml
@@ -181,6 +181,26 @@
       </modules>
     </profile> 
     <profile>
+      <id>sonar</id>
+      <modules>
+        <module>spock-core</module>
+        <module>spock-specks</module>
+        <module>spock-maven</module>
+        <module>spock-example</module>
+        <module>spock-tapestry</module>
+        <module>spock-guice</module>
+        <module>spock-spring</module>
+      </modules>
+      <properties>
+        <sonar.jdbc.url>jdbc:mysql://localhost:3306/sonar?useUnicode=true&amp;characterEncoding=utf8</sonar.jdbc.url>
+        <sonar.jdbc.driver>com.mysql.jdbc.Driver</sonar.jdbc.driver>
+        <sonar.jdbc.username>sonar</sonar.jdbc.username>
+        <sonar.jdbc.password>sonar</sonar.jdbc.password>
+        <sonar.host.url>http://localhost:9123</sonar.host.url>
+        <maven.test.failure.ignore>true</maven.test.failure.ignore>
+      </properties>
+    </profile>
+    <profile>
       <id>release</id>
       <!-- all the modules listed here will be deployed -->
       <modules>
