--- a/build.gradle
+++ b/build.gradle
@@ -11,17 +11,9 @@ ext {
   baseVersion = "1.2"
   snapshotVersion = true
   releaseCandidate = 0
-  variants = [2.0, 2.3, 2.4]
+  variants = [2.4]
   variant = System.getProperty("variant") as BigDecimal ?: variants.last()
-  if (variant == 2.0) {
-    groovyVersion = "2.0.8"
-    minGroovyVersion = "2.0.0"
-    maxGroovyVersion = "2.2.99"
-  } else if (variant == 2.3) {
-    groovyVersion = "2.3.11"
-    minGroovyVersion = "2.3.0"
-    maxGroovyVersion = "2.3.99"
-  } else if (variant == 2.4) {
+  if (variant == 2.4) {
     groovyVersion = "2.4.9"
     minGroovyVersion = "2.4.0"
     maxGroovyVersion = snapshotVersion ? "3.9.99" : "2.9.99" // TODO lock these down once Groovy 3 gets close to RC stage
@@ -30,7 +22,7 @@ ext {
   }
   fullVersion = baseVersion + (snapshotVersion ? "-SNAPSHOT" :  (releaseCandidate ? "-rc-$releaseCandidate" : "")) + "-groovy-$variant"
   variantLessVersion = baseVersion + (snapshotVersion ? "-SNAPSHOT" : (releaseCandidate ? "-rc-$releaseCandidate" : ""))
-  javaVersions = [1.6, 1.7, 1.8]
+  javaVersions = [1.7, 1.8]
   javaVersion = System.getProperty("java.specification.version") as BigDecimal
   libs = [
     jetbrainsAnnotations: "org.jetbrains:annotations:13.0",
@@ -321,7 +313,7 @@ def configureJavadoc(task) {
   configure(task) {
     include "spock/**"
     configure(options) {
-      links "http://docs.oracle.com/javase/6/docs/api/"
+      links "http://docs.oracle.com/javase/8/docs/api/"
       links "http://docs.groovy-lang.org/docs/groovy-$groovyVersion/html/gapi/"
       links "http://junit.org/junit4/javadoc/latest/"
       links "http://hamcrest.org/JavaHamcrest/javadoc/1.3/"
