--- a/build.gradle
+++ b/build.gradle
@@ -306,7 +306,7 @@ configureGroovydoc(groovydoc)
 asciidoctor {
   sourceDir = file("docs")
   logDocuments = true
-  attributes "source-highlighter": "coderay", "linkcss": true, "revnumber": variantLessVersion
+  attributes "source-highlighter": "coderay", "linkcss": true, "sectanchors": true, "revnumber": variantLessVersion
   // also treats the included specs as inputs
   inputs.dir file("spock-specs/src/test/groovy/org/spockframework/docs")
   inputs.dir file("spock-spring/src/test/groovy/org/spockframework/docs")
