--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,10 @@ dist: precise # downgrade to avoid jdk7 SSL Bug https://github.com/docker-librar
 jdk:
   - oraclejdk7 # openjdk7 has SSL Bug avoid jdk7 SSL Bug https://github.com/docker-library/openjdk/issues/117
   - oraclejdk8
+  - oraclejdk9
+
+allow_failures:
+  - jdk: oraclejdk9
 
 env:
   matrix:
