--- a/build.gradle
+++ b/build.gradle
@@ -19,10 +19,10 @@ ext {
   if (variant == 2.4) {
     groovyVersion = "2.4.15"
     minGroovyVersion = "2.4.0"
-    groovyDependency = "org.codehaus.groovy:groovy-all:${groovyVersion}"
+    groovyDependency = ["org.codehaus.groovy:groovy-all:${groovyVersion}"]
   } else if (variant == 2.5) {
     groovyVersion = "2.5.2"
-    minGroovyVersion = "2.5.0"
+    minGroovyVersion = "2.5.2"
     groovyDependency = [
       "org.codehaus.groovy:groovy:${groovyVersion}",
       "org.codehaus.groovy:groovy-groovysh:${groovyVersion}",
@@ -43,14 +43,19 @@ ext {
   }
   fullVersion = baseVersion + ((!snapshotVersion && releaseCandidate) ? "-RC$releaseCandidate" : "") + "-groovy-$variant" + (snapshotVersion ? "-SNAPSHOT" : '')
   variantLessVersion = baseVersion + (snapshotVersion ? "-SNAPSHOT" : (releaseCandidate ? "-RC$releaseCandidate" : ""))
-  javaVersions = [1.7, 1.8]
+  javaVersions = [1.7, 1.8, 9, 10, 11]
   javaVersion = System.getProperty("java.specification.version") as BigDecimal
+
+  if (javaVersion >= 9) {
+    groovyDependency += ["javax.xml.bind:jaxb-api:2.3.0"]
+  }
+
   libs = [
     jetbrainsAnnotations: "org.jetbrains:annotations:13.0",
     ant: "org.apache.ant:ant:1.9.7",
     asm: "org.ow2.asm:asm:6.2",
     bytebuddy: "net.bytebuddy:byte-buddy:1.8.3",
-    cglib: "cglib:cglib-nodep:3.2.6",
+    cglib: "cglib:cglib-nodep:3.2.7",
     groovy: groovyDependency,
     h2database: "com.h2database:h2:1.3.176",
     junit: "junit:junit:4.12",
@@ -70,7 +75,19 @@ allprojects {
 
   apply from: script("common")
 
-  if (javaVersion >= 1.8) {
+  if (javaVersion == 1.8) {
+    tasks.withType(Javadoc) {
+      options.addStringOption('Xdoclint:none', '-quiet')
+      options.noTimestamp()
+    }
+  } else if (javaVersion >= 9){
+    tasks.withType(JavaCompile) {
+      sourceCompatibility = javaVersions.min()
+      targetCompatibility = javaVersions.min()
+      options.compilerArgs += ['--release', '8']
+      options.encoding = 'UTF-8'
+    }
+
     tasks.withType(Javadoc) {
       options.addStringOption('Xdoclint:none', '-quiet')
       options.noTimestamp()
@@ -337,6 +354,7 @@ def configureJavadoc(task) {
   configure(task) {
     include "spock/**"
     configure(options) {
+      options.addStringOption('source', '1.8')
       links "http://docs.oracle.com/javase/8/docs/api/"
       links "http://docs.groovy-lang.org/docs/groovy-$groovyVersion/html/gapi/"
       links "http://junit.org/junit4/javadoc/latest/"
