--- a/settings.gradle
+++ b/settings.gradle
@@ -5,7 +5,12 @@ include "spock-spring"
 include "spock-spring:spring2-test"
 include "spock-spring:spring3-test"
 include "spock-guice"
-include "spock-tapestry"
+
+// https://issues.apache.org/jira/projects/TAP5/issues/TAP5-2588
+if (JavaVersion.current().isJava7() || JavaVersion.current().isJava8()) {
+  include "spock-tapestry"
+}
+
 include "spock-unitils"
 include "spock-report"
 include "spock-gradle"
@@ -18,7 +23,6 @@ if (JavaVersion.current().java8Compatible) {
   include "spock-spring:boot2-test"
   include "spock-spring:spring5-test"
 }
-
 
 rootProject.name = "spock"
 nameBuildScriptsAfterProjectNames(rootProject.children)
